# catkin-package-template

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: config.json  config.yaml
include/catkin_package_template/: package_lib.hpp
include/package/: lib.hpp
launch/: package.launch
scripts/: py_node.py  script.py
src/: cpp_node.cpp  lib.cpp  package_lib.cpp  package_node.cpp
